[WIP] Evolução da implementação da listagem de professores
