# src/main/java/br/com/rest/api/spring/msescola/apis/EscolaApiImpl.java
@@ -6,11 +6,15 @@ import br.com.rest.api.spring.msescola.services.impl.TeacherServiceImpl;
 import io.swagger.api.RestApi;
 import io.swagger.model.DetalheProfessor;
 import io.swagger.model.Professor;
+import io.swagger.model.ProfessorArray;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
 import java.util.List;
 
 @RestController
@@ -24,14 +28,17 @@ public class EscolaApiImpl implements RestApi {
     private TeacherServiceImpl teacherServiceImpl;
 
     @GetMapping(value = "/v1/professores")
-    public ResponseEntity<List<Professor>> listarProfessores() {
+    public ResponseEntity<ProfessorArray> listarProfessores() {
 
-        List<Teacher> teachers = teacherServiceImpl.listaDeJogadores();
+        List<Teacher> teachers = teacherServiceImpl.listaDeProfessores();
 
         List<Professor> professores = teacherMapper.teachersToProfessores(teachers);
 
-        return ResponseEntity.ok(professores);
+        ProfessorArray professorArray = (ProfessorArray) professores;
+
+        return ResponseEntity.ok(professorArray);
     }
+
 
     @GetMapping(value = "/v1/professores/{id}")
     public ResponseEntity<DetalheProfessor> consultarProfessor(@PathVariable String id) {
